--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -173,8 +173,9 @@ button.start-btn:hover {
     background: #ffe9e9;
     transform: translate(0, 0.25em);
 }
-
+/*
 button.start-btn:hover::before {
     box-shadow: 0 0 0 2px #b18597, 0 0.35em 0 0 #ffe3e2;
     transform: translate3d(0, 0.5em, -1em);
 }
+*/
