--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -12,7 +12,7 @@ body {
         radial-gradient(ellipse at 28% 0%, #ffcfac 0%, rgba(98, 149, 144, 0.5) 100%), 
         linear-gradient(180deg, #cd6e8a 0%, #f5eab0 69%, #d6c8a2 70%, #a2758d 100%); 
         background-blend-mode: normal, normal, screen, overlay, normal;
-        color: #2F4858;
+    color: #2F4858;
 }
 
 .container {
@@ -28,7 +28,6 @@ body {
 .game-area {
     grid-area: 1 / 2 / 4 / 3;
     height: 80%;
-    /*background-color: #cd6e8a;*/
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 0.6fr 0.25fr 0.3fr 0.3fr;
@@ -63,6 +62,7 @@ body {
     grid-template-columns: 0.1fr 1fr 0.1fr;
     place-items:center center;
     width: 100%;
+    color: #2F4858;
 }
 form {
     grid-area: 3 / 1 / 4 / 2;
@@ -155,7 +155,7 @@ button.start-btn:active::before {
 }
 
 /*          DILOG                         */
-dialog {
+.inf {
     text-align: center;
     margin: auto;
     padding:  95px 3rem;
@@ -170,6 +170,9 @@ dialog {
     box-shadow:  15px 15px 46px #846874,
                 -15px -15px 46px #cea2b6;
 }
+.inf::backdrop {
+    backdrop-filter: blur(15px);
+}
 .close {
     font-size:medium;
     color: #3a3a40;  
@@ -180,3 +183,30 @@ dialog {
     right: 0;
 }
 
+.score-canvas {
+    display: none;
+    flex-direction: column;
+    position: fixed;
+    margin-top: -250px;
+    margin-right: -250px;
+    top: 50%;
+    right: 50%;
+    width: 500px;
+    height: 500px;
+    padding: 1rem;
+    border-radius: 0.8rem;
+    text-align: center;
+    background-color: rgba(255,255,255,0.3);
+}
+table {
+    text-align: center;
+}
+.score-canvas h2 {
+    font-size: 2.8rem;
+    margin-bottom: 0.6rem;
+}
+.close-btn {
+    position: absolute;
+    top: 4%;
+    right: 4%;
+}
